<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    tools:context=".ui.CreatePetFragment"
    android:id="@+id/create_pet_fragment_scroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"  >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40sp"
            android:text="Добавление питомца"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:gravity="center" />

        <!--    Source    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_pet_fragment_source_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Ссылка на источник"
            app:helperTextEnabled="true"
            app:helperText="Поле обязательно"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_pet_fragment_source_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Name    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_pet_fragment_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Имя"
            app:helperTextEnabled="true"
            app:helperText="Поле обязательно"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_pet_fragment_name_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Shelter    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_pet_fragment_shelter_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Приют"
            app:helperTextEnabled="true"
            app:helperText="Поле обязательно"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/create_pet_fragment_shelter_auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Type    -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/create_pet_fragment_type_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Тип"
            app:helperTextEnabled="true"
            app:helperText="Поле обязательно"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/create_pet_fragment_type_auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Breed    -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Порода"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_pet_fragment_breed_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Gender    -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:text="Пол"
            style="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <RadioGroup
            android:id="@+id/create_pet_fragment_gender_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/create_pet_fragment_female_gender"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Женский"/>

            <RadioButton
                android:id="@+id/create_pet_fragment_male_gender"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="Мужской"/>
        </RadioGroup>

        <!--    Birth    -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Возраст / дата рождения"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_pet_fragment_birth_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Height    -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Высота в холке"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_pet_fragment_height_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Description    -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="Описание"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_pet_fragment_description_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--    Photos    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_pet_fragment_photo_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20sp"
                android:hint="Фотография"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="Поле обязательно. Можно добавить несколько"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_pet_fragment_photo_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/create_pet_fragment_submit_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_add_24"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/create_pet_fragment_photo_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:overScrollMode="never"
            tools:itemCount="2"/>

        <!--    Submit button    -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_pet_fragment_create_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Создать питомца"
            android:layout_gravity="center" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>