...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/card_pet_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/dog_mock_image"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp" >

            <TextView
                android:id="@+id/card_pet_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Pet name"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:gravity="center_vertical"
...
