<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorWhite"
    android:id="@+id/filter_view_parent_linear_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Типы питомцев"
        style="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <CheckBox
        android:id="@+id/filter_view_parent_check_box_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Все типы"
        android:checked="true" />

    <LinearLayout
        android:id="@+id/filter_view_children_checkbox_linear_layout_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp" >
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Приюты"
        style="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <CheckBox
        android:id="@+id/filter_view_parent_check_box_shelters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Все приюты"
        android:checked="true" />

    <LinearLayout
        android:id="@+id/filter_view_children_checkbox_linear_layout_shelters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp" >
    </LinearLayout>
</LinearLayout>